# famapp-transac-log

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py  ledger.py
