[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "famapp-transac-log"
version = "0.1.0"
authors = [
    { name = "iy3k" }
]
description = "A pluggable database logger and replay protection module for FamApp gateway payments."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
supabase = [
    "supabase>=2.0.0",
]

[tool.setuptools]
packages = ["famapp_transac_log"]
package-dir = {"famapp_transac_log" = "src"}
